@@ -34,6 +34,7 @@ ocrImageFormatName png
 #options: argb, binary, gray, rgb
 ocrImageType gray
 #scale to use when rendering a page image for OCR
+#as of Tika 1.23, this is no longer used; use ocrDPI instead
 ocrImageScale 2.0
 # Use up to 500MB when loading a pdf into a PDDocument
 maxMainMemoryBytes 524288000
